--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@
         <nav>
             <a href=>Inicio</a>
             <a href="">Cardápio</a>
-            <a href="">Promoções</a>
+            <a href="#promoções">Promoções</a>
             <a href='#faleconosco'> Fale Conosco</a>
         </nav>
     </header>
     <main>
-        
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius incidunt minima qui possimus iure eum ab quis, vitae unde veritatis porro aperiam laudantium ipsum ullam beatae ut? Aperiam, voluptatibus vitae!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p>
+        <section>
+            <div id="promoções" class="container2">
+            <div class="grid">
+            </div>
+            <div class="descrição-promo">
+                <h2>Toda semana, de terça à quinta, temos promoção!</h2>
+                <p>Todas terças, quartas e quintas, temos promoção de esfihas de carne, queijo e calabresa por um preço sensacional!!"</p>
+            </div>
+        </section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error laudantium hic dolore ipsam doloremque qui alias earum corporis, iure blanditiis quia, deleniti laboriosam dicta, ut repudiandae velit quam totam atque!</p>
     </main>
     <aside>
         <div class="mapa">
