--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body>
     <header>
-            <h1 class="titulo">Pizzaria Cecap</h1>
+        <div class="delivery">
+            <p>☎️<strong>Delivery:(11) 2408-8161</strong> </p>
+        </div>
             <div class="logo"></div>
         <nav>
             <a href=>Inicio</a>
@@ -28,7 +30,8 @@
     </header>
     <main>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro officia ut, eius necessitatibus hic natus quos esse placeat corporis aliquid aut error consequatur dolore repellat eum beatae dicta illo? Rem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, nemo rem! Adipisci ab similique, at distinctio reprehenderit accusantium mollitia voluptas qui magni odio iusto ipsam voluptatibus neque? Possimus, officia saepe. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae similique culpa asperiores quia molestias laboriosam odit aliquam repellendus facilis nesciunt? Quam et earum similique deleniti autem ad sit repellat dicta?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum similique voluptates ut eius vero corporis quas beatae harum ab aspernatur iusto eaque nulla soluta reiciendis hic totam sequi quis explicabo, nisi excepturi? Accusamus eveniet nihil nulla voluptatibus rerum! Natus ut, voluptas doloribus, dolore sequi assumenda, tempore autem exercitationem at in mollitia culpa pariatur quasi perspiciatis reprehenderit optio fugiat a delectus aperiam nulla vitae iusto tenetur commodi similique? Qui voluptates dolores eaque laboriosam nulla veniam quas at aperiam ipsa optio dicta aut, porro minima repellat nobis reprehenderit explicabo expedita numquam assumenda velit animi rerum! Voluptatum ipsum ipsam sunt nemo, tempora iusto!</p>
         <section>
             <div id="promoções" class="container2">
             <div class="grid">
@@ -38,11 +41,11 @@
                 <p>Todas terças, quartas e quintas, temos promoção de esfihas de carne, queijo e calabresa por um preço sensacional!!"</p>
             </div>
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error laudantium hic dolore ipsam doloremque qui alias earum corporis, iure blanditiis quia, deleniti laboriosam dicta, ut repudiandae velit quam totam atque!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error laudantium hic dolore ipsam doloremque qui alias earum corporis, iure blanditiis quia, deleniti laboriosam dicta, ut repudiandae velit quam totam atque!</p><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis earum enim totam iste beatae officia quisquam nisi? Quam magnam molestias in explicabo, aliquid dolore veritatis quas tempore vero id iste dolorem, ipsum, impedit doloremque accusamus nemo. At officiis nobis similique ducimus? Maiores dolorum dolore dolorem. Explicabo sunt placeat itaque ducimus ad tempora, impedit necessitatibus mollitia eveniet blanditiis laboriosam, officia, numquam repellat fuga quisquam distinctio nisi ipsum voluptatem veritatis dolorem sapiente ullam! Vitae eum enim repellat quod aliquid, dolorem nemo, cupiditate temporibus nisi possimus eligendi, ipsam quo earum. Adipisci neque suscipit, quidem dignissimos iure eos, architecto, dicta sit facilis quae numquam?</p>
     </main>
     <aside>
         <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d14640.04174961712!2d-46.494459!3d-23.460088!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjPCsDI3JzM2LjMiUyA0NsKwMjknNDAuMSJX!5e0!3m2!1spt-BR!2sus!4v1693228010204!5m2!1spt-BR!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3660.0154308097312!2d-46.49704292467292!3d-23.45990787886963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sPark%20Center%20-%20Loja%2010%20Alameda%20Vit%C3%B3rias%20R%C3%A9gias%20194%2C%20Guarulhos%2C%20S%C3%A3o%20Paulo%2C%20Brasil%2C%2007190-070!5e0!3m2!1spt-BR!2sbr!4v1693575774639!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </aside>
 
