--- a/index.html
+++ b/index.html
@@ -31,10 +31,35 @@
     <main>
        <section id="inicio">
            <div class="container3">
-            <div></div>
             <div class="bem-vidos">
                 <h1>Bem-vindos à Pizzaria Cecap !!</h1>
                 <p>Na pizzaria cecap, a arte de rechear vai além! Trazemos o sabor de Guarulhos em cada fatia de pizza. Nossos ingredientes são escolhidos com carinho para você sentir o verdadeiro sabor guarulhense em cada mordida."</p>
+            </div>
+            <div class="divcard">
+                <div class="card">
+                    <img src="imagens/pexels-sobee-berly-5280912.jpg" alt="">
+                    <h1>Pizza de Mussarela</h1>
+                    <p>Mussarela Scala, Molho especial, Tomate ao forno e Azeitonas</p>
+                    <a href=""><button>Confira nosso cardápio</button></a>
+                </div>
+                <div class="card">
+                    <img src="imagens/pexels-brett-jordan-825661.jpg" alt="">
+                    <h1>Pizza de Calabresa</h1>
+                    <p>Calabresa fatiada, Molho especial, Cebola e Azeitonas</p>
+                    <a href=""><button>Confira nosso cardápio</button></a>
+                </div>
+                <div class="card">
+                    <img src="imagens/pexels-engin-akyurt-2619970.jpg"">
+                    <h1>Pizza Baina</h1>
+                    <p>Calabresa moída, Pimenta, Ovos, Coberta c/Mussarela e Azeitonas</p>
+                    <a href=""><button>Confira nosso cardápio</button></a>
+                </div>
+                <div class="card">
+                    <img src="imagens/istockphoto-1255499562-612x612.jpg" alt="">
+                    <h1>Pizza de Frango</h1>
+                    <p>Mussarela Scala, Molho especial, Tomate ao forno e Azeitonas</p>
+                    <a href=""><button>Confira nosso cardápio</button></a>
+                </div>
             </div>
            </div>
        </section>
