--- a/index.html
+++ b/index.html
@@ -72,12 +72,22 @@
                 <p>Todas terças, quartas e quintas, temos promoção de pizza!!"</p>
             </div>
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error laudantium hic dolore ipsam doloremque qui alias earum corporis, iure blanditiis quia, deleniti laboriosam dicta, ut repudiandae velit quam totam atque!</p><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis earum enim totam iste beatae officia quisquam nisi? Quam magnam molestias in explicabo, aliquid dolore veritatis quas tempore vero id iste dolorem, ipsum, impedit doloremque accusamus nemo. At officiis nobis similique ducimus? Maiores dolorum dolore dolorem. Explicabo sunt placeat itaque ducimus ad tempora, impedit necessitatibus mollitia eveniet blanditiis laboriosam, officia, numquam repellat fuga quisquam distinctio nisi ipsum voluptatem veritatis dolorem sapiente ullam! Vitae eum enim repellat quod aliquid, dolorem nemo, cupiditate temporibus nisi possimus eligendi, ipsam quo earum. Adipisci neque suscipit, quidem dignissimos iure eos, architecto, dicta sit facilis quae numquam?</p>
+        <section class="chamada">
+            <div id="container4">
+                <div class="chamada1">
+                    <p>Na pizzaria Cecap , a arte de rechear vai além!Trazemos o sabor de Guarulhos em cada fatia de pizza.Nossos ingredientes são escolhidos com carinho para você sentir o verdadeiro sabor guarulhense em cada mordidada!!</p>
+                </div>
+                <div class="botão">
+                    <p><a href="tel:+551124088161">clique Aqui para fazer o seu Pedido</a></p>
+                </div>
+            </div>
+        </section>
     </main>
     <aside>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3660.0154308097312!2d-46.49704292467292!3d-23.45990787886963!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sPark%20Center%20-%20Loja%2010%20Alameda%20Vit%C3%B3rias%20R%C3%A9gias%20194%2C%20Guarulhos%2C%20S%C3%A3o%20Paulo%2C%20Brasil%2C%2007190-070!5e0!3m2!1spt-BR!2sbr!4v1693575774639!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+
     </aside>
 
     <footer>
