--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         <div id="faleconosco" class="container">
             <div class="endereco">
                 <h2>ENDEREÇO</h2>
-                <p>Park Center - Loja 10 Alameda Vitórias Régias 194, Guarulhos, São Paulo, Brasil, 07190-070</p>
+                <a href="https://www.google.com/maps?ll=-23.459908,-46.497043&z=15&t=m&hl=pt-BR&gl=BR&mapclient=embed&q=Park+Center+-+Loja+10+Alameda+Vit%C3%B3rias+R%C3%A9gias+194,+Guarulhos,+S%C3%A3o+Paulo,+Brasil,+07190-070" target="_blank">
+                    <p>Park Center - Loja 10 Alameda Vitórias Régias 194, Guarulhos, São Paulo, Brasil, 07190-070</p>
+                </a>
             </div>
             <div class="horario">
                 <h2>HORÁRIO DE FUNCIONAMENTO</h2>
@@ -118,7 +120,9 @@
             </div>
             <div class="telefone">
                 <h2>Telefone</h2>
-                <ul type="none"><li>(11)2408-8161</li></ul>
+                <ul type="none">
+                        <li>(11)2408-8161</li>
+                </ul>
             </div>
         </div>
     </footer>
